# bump2release

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.MD  changelog_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint-test.yml
src/bump2release/: b2v_handler.py  cli.py  colorama_handler.py  constants.py  exceptions.py  git_actions.py  release_flow.py  utils.py
src/bump2release/utilities/: b2v_handler.py  colorama_handler.py  file_reader.py  git_actions.py  subprocess_handler.py
tests/: test_colorama_handler.py  test_release_flow.py  test_sample.py  test_subprocess_handler.py
tests/test-filereader/: test_file_reader.py
tests/test-utilities/: test_colorama_handler.py  test_git_actions.py  test_subprocess_handler.py
tests/test_file_reader/: test_file_reader.py
