[metadata]
name = bump2release
version = file: version.txt
author = Natti Katz
author_email = katzy687@gmail.com
description = Extension of Bump2version to push release tag to git remote
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/katzy687/bump2release
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src